# UiAbot_mini

./: .gitignore  .readme  README.md  README_xbox_controller.md  frames_2025-10-13_14.47.52.gv  frames_2025-11-16_11.30.19.gv  frames_2025-11-16_17.30.19.gv  frames_2025-11-24_12.04.41.gv  start_xbox_controller.sh  start_xbox_teleop.sh
.config/: xbox_teleop.yaml
maps/: my_map.pgm  my_map.yaml
src/: readme.txt  xbox_joy_node.py
src/Tune/: tune.py
src/data_publisher/: package.xml  setup.cfg  setup.py
src/data_publisher/data_publisher/: data_publisher.py
src/gazebo_test/: package.xml  setup.py
src/gazebo_test/urdf/: test_robot.urdf.xacro
src/maps/: .data  map_1761661373.pgm  map_1761661373.yaml
src/motor_controller_tuning/: pid_tuning.py
src/my_robot_bringup/: package.xml  setup.py
src/my_robot_bringup/config/: ekf.yaml
src/my_robot_bringup/launch/: bringup.launch.py
src/my_robot_bringup/meshes/: wheel.STL
src/my_robot_bringup/urdf/: uiabot_mini.urdf
src/serial_communication/: package.xml  setup.py
src/serial_communication/noder/: odometry.py  teleop_to_serial.py  wheel_state_publisher.py
src/serial_sync_tester/: serial_sync_tester.py
src/teleop_to_serial/: package.xml  setup.cfg  setup.py
src/teleop_to_serial/teleop_to_serial/: differential_drive_odometry.py  teleop_to_serial.py  wheel_state_publisher.py
src/uiabot_bringup/: CMakeLists.txt  README.md  package.xml
src/uiabot_bringup/config/: ekf.yaml
src/uiabot_bringup/launch/: bringup.launch.py
src/uiabot_bringup/urdf/: uiabot_mini.urdf
src/uiabot_mini/: package.xml  setup.cfg  setup.py
src/uiabot_mini/uiabot_mini/: serial_communication.py  teleop_to_serial.py  wheel_encoder_odometry.py  wheel_joint_state_publisher.py
src/uiabot_mini_bringup/: package.xml  setup.cfg  setup.py
src/uiabot_mini_bringup/config/: bno055_params_i2c.yaml  ekf.yaml  nav2_params copy.yaml  nav2_params.yaml  slam_params.yaml
src/uiabot_mini_bringup/launch/: bringup.launch.py  perception_launch.py  slam_launch.py  teleop_launch.py
src/uiabot_mini_bringup/maps/: Datalab.pgm  Datalab.yaml  kontor_ruben.pgm  kontor_ruben.yaml
src/uiabot_mini_core/: package.xml  setup.cfg  setup.py
src/uiabot_mini_core/uiabot_mini_core/: teleop_to_serial.py  wheel_encoder_odometry.py  wheel_joint_state_publisher.py
src/uiabot_mini_description/: package.xml  setup.cfg  setup.py
src/uiabot_mini_description/meshes/: wheel.STL
src/uiabot_mini_description/urdf/: uiabot_mini.gazebo  uiabot_mini.urdf
src/uiabot_mini_gazebo/: README.md  building_robot.sdf  package.xml  setup.cfg  setup.py
src/uiabot_mini_gazebo/config/: diff_drive_controller.yaml
src/uiabot_mini_gazebo/launch/: uiabot_mini_gazebo_launch.py
src/uiabot_mini_gazebo/urdf/: uiabot_mini.xacro  uiabot_mini_gazebo.urdf
src/uiabot_mini_gazebo/worlds/: simple_world.sdf  simple_world2.sdf
src/uiabot_mini_system_test/: package.xml  setup.cfg  setup.py
src/xbox_wsl/: README_xbox_controller.md  XBOX_CONTROLLER_SETUP.md  package.xml  setup.py
src/xbox_wsl/config/: xbox_teleop.yaml
src/xbox_wsl/launch/: test_robot.launch.py
src/xbox_wsl/scripts/: start_xbox_teleop.sh
src/xbox_wsl/xbox_wsl/: xbox_joy_node.py
