<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uiabot_mini_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gruppe-6@todo.todo">gruppe-6</maintainer>
  <license>Apache-2.0</license>

  <!-- Test dependencies, uncomment if needed -->
  <!--
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  -->

  <!-- Dependencies for running the package -->
  <!-- Assignment 1 -->
  <exec_depend>python3-serial</exec_depend> <!-- Python serial com- tts -->
  <exec_depend>rclpy</exec_depend> <!-- Python client lib - all -->
  <exec_depend>geometry_msgs</exec_depend> <!-- Twist - tts, weo -->
  
  <!-- Assignment 2 -->
  <exec_depend>std_msgs</exec_depend> <!-- Float32 - tts, wjsp, weo -->
  <exec_depend>sensor_msgs</exec_depend> <!-- Sensor msg - wjsp -->
  <exec_depend>robot_state_publisher</exec_depend> <!-- URDF visual - wjsp -->
  <exec_depend>tf2_ros</exec_depend> <!-- TF brodcasting - wjsp -->

  <!-- IMU Dependencies -->
  <exec_depend>imu_tools</exec_depend>
  <exec_depend>python3-smbus</exec_depend>  

  <!-- Assignment 3 -->
  <exec_depend>nav_msgs</exec_depend>  <!-- Odometry msg - weo -->
  <exec_depend>robot_localization</exec_depend>  <!-- EKF node -->
  <exec_depend>slam_toolbox</exec_depend>  <!-- SLAM -->

  <!-- Assignment 4 -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
