[metadata]
name = uiabot_mini_gazebo
version = 0.0.0
author = Group-x
author_email = Group-x@uia.no
maintainer = Group-x
maintainer_email = Group-x@uia.no
description = TODO: Package description
license = BSD-3-Clause

[options]
packages = find:
install_requires =
    rclpy
    controller_manager
    ros2_control
    ros2_controllers
    trajectory_msgs
    xacro

[develop]
script_dir=$base/lib/uiabot_mini_gazebo
[install]
install_scripts=$base/lib/uiabot_mini_gazebo
